# jfjb_spider

./: .gitignore  CLAUDE.md  README.md  jfjb.py  jfjb_spider.py  mkdocs.yml  pyproject.toml  requirements.txt  rmrb.py  rmrb_spider.py  run.bat
docs/: index.md  installation.md  quickstart.md
docs/api/: cli.md  fonts.md  jfjb_spider.md  models.md  network.md  pdf.md  rmrb_spider.md  utils.md
docs/superpowers/plans/: 2026-04-20-uv-pyqt6-gui.md
docs/superpowers/specs/: 2026-04-20-uv-pyqt6-gui-design.md
docs/usage/: fonts.md  jfjb.md  output.md  rmrb.md
newspaper_pdf/: __init__.py  cli.py  fonts.py  jfjb_spider.py  models.py  network.py  pdf.py  rmrb_spider.py  utils.py
newspaper_pdf/gui/: __init__.py  app.py  crawl_panel.py  result_panel.py  styles.py  workers.py
tests/: conftest.py  test_cli.py  test_fonts.py  test_gui_styles.py  test_gui_workers.py  test_integration.py  test_jfjb_spider.py  test_models.py  test_network.py  test_pdf.py  test_rmrb_spider.py  test_utils.py
tests/fixtures/: jfjb_index.json
